# pptx-to-clean-templates

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml
src/x6pptxgen/: __init__.py  cli.py
src/x6pptxgen/audit/: checks.py  report.py
src/x6pptxgen/heal/: engine.py
src/x6pptxgen/measure/: fonts.py
src/x6pptxgen/template/: inventory.py  opener.py
tests/: conftest.py  test_census_regressions.py  test_heal_engine.py  test_inventory.py  test_opener.py
