[project]
name = "x6pptxgen"
version = "0.1.0"
description = "Analyze any .pptx/.potx and heal hand-built slides into real, reusable PowerPoint layouts."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "python-pptx==1.0.2",
    "lxml>=5",
    "typer>=0.12",
    "rich>=13",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[project.scripts]
x6 = "x6pptxgen.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x6pptxgen"]
